kubernetes/apps/base/kube-prometheus-stack/namespace.yaml
---
# create a namespace for homepage
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
