kubernetes/apps/base/kube-prometheus-stack/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-prometheus
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`${HOST_PROMETHEUS}.${DOMAIN}`)
      services:
        - kind: Service
          name: prometheus-operated
          namespace: monitoring
          port: 9090
  tls:
    secretName: prometheus.${DOMAIN}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-alertmanager
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`${HOST_ALERTS}.${DOMAIN}`)
      services:
        - kind: Service
          name: alertmanager-operated
          namespace: monitoring
          port: 9093
  tls:
    secretName: alerts.${DOMAIN}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`${HOST_GRAFANA}.${DOMAIN}`)
      services:
        - kind: Service
          name: grafana
          namespace: monitoring
          port: 80
  tls:
    secretName: grafana.${DOMAIN}
